# rsbtc

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: crypto.rs  error.rs  lib.rs  network.rs  sha256.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
miner/: Cargo.toml
miner/src/: main.rs
node/: Cargo.toml
node/src/: handler.rs  main.rs  util.rs
wallet/: Cargo.toml
wallet/src/: core.rs  main.rs
