[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.2"
serde = { version = "1.0.210", features = ["derive"] }
sha256 = "1.5.0"
uint = "0.10.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
